# Agentick-BE

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  container.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py
app/model/: __init__.py  base_model.py  calendar.py  event.py  invitation.py  member_role.py  notification.py  phase.py  project.py  project_member.py  tag.py  task.py  task_priority.py  task_status.py  task_type.py  team.py  team_member.py  user.py  work_schedule.py
app/repository/: __init__.py  base_repository.py  calendar_repository.py  event_repository.py  invitation_repository.py  notification_repository.py  phase_repository.py  project_member_repository.py  project_repository.py  tag_repository.py  task_priority_repository.py  task_repository.py  task_status_repository.py  task_type_repository.py  team_member_repository.py  team_repository.py  user_repository.py  work_schedule_repository.py
app/schema/: auth_schema.py  base_schema.py  calendar_schema.py  event_schema.py  invitation_schema.py  notification_schema.py  phase_schema.py  project_member_schema.py  project_schema.py  schedule_schema.py  tag_schema.py  task_priority_schema.py  task_schema.py  task_status_schema.py  task_type_schema.py  team_member_schema.py  (+2 more)
docs/: ARCHITECTURE.md  FEATURE_DEV_PATTERN.md  fe-api-spec-task-module.md  work-calendar-integration.md
migrations/: env.py
scratch/: check_db.py
scripts/: start.sh
tests/: conftest.py
(+58 files in other folders)
